# csv-query-tool

./: .coveragerc  .gitignore  README.md  main.py  pyproject.toml
core/: csv_processor.py  logger.py
data/: books.csv  customers.csv  employees.csv  inventory.csv  sales.csv  transactions.csv
tests/: base_test.py  conftest.py  test_aggregation.py  test_data_row.py  test_filter.py  test_integration.py  test_loading.py  test_sorting.py
tests/utils/: __init__.py  csv_analyzer.py
